--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,16 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/homeScreen">
+    app:startDestination="@id/locationFragment">
 
     <fragment
         android:id="@+id/homeScreen"
-        android:name="nl.paulkros.safespace.screens.HomeScreen"
+        android:name="nl.paulkros.safespace.screens.HomeFragment"
         android:label="fragment_home_screen"
-        tools:layout="@layout/fragment_home_screen" />
+        tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/scoreFragment"
         android:name="nl.paulkros.safespace.screens.ScoreFragment"
         android:label="fragment_score"
         tools:layout="@layout/fragment_score" />
+    <fragment
+        android:id="@+id/locationFragment"
+        android:name="nl.paulkros.safespace.screens.LocationFragment"
+        android:label="fragment_location"
+        tools:layout="@layout/fragment_location" />
 </navigation>
