--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -6,8 +6,8 @@
         <item name="colorOnPrimary">@color/white</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:fontFamily">@fonts/Poppins</item>
-        <item name="android:textStyle">bold</item>
+<!--        <item name="android:fontFamily">@fonts/Poppins</item>-->
+<!--        <item name="android:textStyle">bold</item>-->
         <item name="android:textColor">@color/white</item>
     </style>
 </resources>
