--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/locationScreen">
-
+    app:startDestination="@id/locationFragment">
     <fragment
-        android:id="@+id/homeScreen"
+        android:id="@+id/homeFragment"
         android:name="nl.paulkros.safespace.screens.HomeFragment"
-        android:label="fragment_home_screen"
-        tools:layout="@layout/fragment_home" />
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home"/>
+    <fragment
+        android:id="@+id/locationFragment"
+        android:name="nl.paulkros.safespace.screens.LocationFragment"
+        android:label="LocationFragment" />
     <fragment
         android:id="@+id/scoreFragment"
         android:name="nl.paulkros.safespace.screens.ScoreFragment"
         android:label="fragment_score"
         tools:layout="@layout/fragment_score" />
     <fragment
-        android:id="@+id/locationFragment"
-        android:name="nl.paulkros.safespace.screens.LocationFragment"
-        android:label="fragment_location"
-        tools:layout="@layout/fragment_location" />
-    <fragment
-        android:id="@+id/locationScreen"
+        android:id="@+id/preferencesFragment"
         android:name="nl.paulkros.safespace.screens.PreferencesFragment"
-        android:label="fragment_location_screen"
+        android:label="fragment_preferences"
         tools:layout="@layout/fragment_preferences" />
 </navigation>
